--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Shaw Talebi
-logo: /assests/img/headshot_circle.png
+title: Sabrina Lin
+#logo: /assests/img/headshot_circle.png
 #descritption: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
